🐝 fix: remove extra margin

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -8,7 +8,6 @@
 .account-switch
     position relative
     padding-bottom 20px
-    margin-bottom 20px
     border-bottom 1px solid silver
 
     a
